# highest_volatility

./: .gitignore  =0.21  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  debug_chunk__next_static_chunks_pages_fortune-500-companies-dd225eb0f148ebdc.js  debug_fetch_1_us500_com.html  debug_fetch_2_companiesmarketcap_com.html  debug_fetch_selenium_1_us500_com.html  debug_next_data_jrK4ab6xRcZQ6ljZkJCTI_fortune-500-companies.json_skip_50.json  fortune100_volatility.csv  fortune100_volatility.py  fortune500_tickers.csv  industry_health_kpi.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  tmp_range_test.py  tmp_test.py
.github/workflows/: ci.yml  daily-price-fetch.yml  fortune.yml  perf-benchmark.yml  update-fortune-tickers.yml
.pytest_tmp/test_annotations_persist_acros0/: annotations.db
.pytest_tmp/test_annotations_returns_503_o0/: annotations.db
.pytest_tmp/test_async_incremental_and_for0/1d/: ABC.json  ABC.parquet
.pytest_tmp/test_fetch_many_async0/1d/: AAA.json  BBB.json  BBB.parquet
.pytest_tmp/test_incremental_and_force_ref0/1d/: ABC.json
.pytest_tmp/test_load_cached_hydrates_from0/1d/: AAPL.json  AAPL.parquet
.pytest_tmp/test_metrics_plugin_directory0/metrics/: my_metric.py
.pytest_tmp/test_render_output_step_export0/: out.csv
.pytest_tmp/test_round_trip0/1d/: ABC.json  ABC.parquet
.pytest_tmp/test_save_cache_respects_allow0/30m/: XYZ.json  XYZ.parquet
.tmp_prices/30m/: AAPL.csv
cache/prices/: AAL.csv  AAPL.csv  ABBV.csv  ABT.csv  ACI.csv  ADM.csv  AIG.csv  ALL.csv  AMAT.csv  AMD.csv  AMGN.csv  AMZN.csv  AN.csv  APO.csv  ARW.csv  AVGO.csv  AVT.csv  AXP.csv  BA.csv  BAC.csv  BBY.csv  BK.csv  BKNG.csv  BKR.csv  BMY.csv  BRK-A.csv  C.csv  CAH.csv  CARR.csv  CAT.csv  CBRE.csv  CEG.csv  CHTR.csv  CI.csv  CMCSA.csv  CMI.csv  CNC.csv  COF.csv  COP.csv  COR.csv  (+148 more)
cache/prices/30m/: AAL.csv  AAPL.csv  ABBV.csv  ABT.csv  ACI.csv  ADM.csv  AIG.csv  ALL.csv  AMAT.csv  AMD.csv  AMGN.csv  AMZN.csv  AN.csv  APO.csv  ARW.csv  AVGO.csv  AVT.csv  AXP.csv  BA.csv  BAC.csv  BBY.csv  BK.csv  BKNG.csv  BKR.csv  BMY.csv  BRK-A.csv  C.csv  CAH.csv  CARR.csv  CAT.csv  CBRE.csv  CEG.csv  CHTR.csv  CI.csv  CMCSA.csv  CMI.csv  CNC.csv  COF.csv  COP.csv  COR.csv  (+148 more)
docs/: api.md
docs/audit/: audit_report.md  findings_ledger.md
docs/reliability/: slo.md  testing.md
scripts/: backfill_all_intervals.py  bench_additional_volatility.py  diagnose_environment.py  refresh_cache.py  refresh_cache_all_intervals.py  repair_cache_layout.py  scrape_fortune_500_tickers.py  validate_kpis.py
scripts/benchmarks/: ohlc_volatility_perf.py
src/: __init__.py  cli.py
src/.cache/tickers/: fortune.json  fortune_500.csv
src/api/: __init__.py
src/cache/: __init__.py  merge.py  store.py
src/config/: interval_policy.py
src/datasource/: base.py  yahoo.py  yahoo_async.py  yahoo_http_async.py
src/highest_volatility/: __init__.py  __main__.py  cli.py  errors.py  logging.py  universe.py
src/highest_volatility.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/highest_volatility/api/: __init__.py
src/highest_volatility/app/: analysis_state.py  api.py  cli.py  sanitization.py  streamlit_app.py  ui_helpers.py
src/highest_volatility/cache/: __init__.py  merge.py  store.py
src/highest_volatility/compute/: __init__.py  metrics.py  volatility.py
src/highest_volatility/config/: __init__.py  environment.py  interval_policy.py  paths.py
src/highest_volatility/datasource/: __init__.py  base_async.py  yahoo_async.py  yahoo_http_async.py
src/highest_volatility/ingest/: __init__.py  async_fetch_prices.py  downloaders.py  fetch_async.py  fetch_parallel.py  fetch_prices.py  prices.py  tickers.py
src/highest_volatility/pipeline/: __init__.py  cache_refresh.py  load_prices.py  validation.py
src/highest_volatility/security/: __init__.py  validation.py
src/ingest/: async_fetch_prices.py  fetch_async.py  fetch_parallel.py  fetch_prices.py
src/pipeline/: load_prices.py
src/security/: __init__.py  validation.py
tests/: conftest.py  test_additional_volatility_measures.py  test_annotation_settings.py  test_annotations_api.py  test_api_cache_headers.py  test_api_payload_shape.py  test_api_security.py  test_async_fetcher.py  test_cache_hydration.py  test_cache_refresh_resilience.py  test_cache_store.py  test_cache_store_validation.py  test_cache_validation.py  test_chaos_experiments.py  test_cli.py  test_cli_guard.py  test_cli_integration.py  test_downloaders_timezone.py  test_environment_defaults.py  test_error_diagnostics.py  test_error_resilience.py  test_health_endpoints.py  test_interval_policy.py  test_merge_incremental.py  test_metric_plugins.py  test_metrics.py  test_package_bootstrap.py  test_periods_per_year.py  test_price_fetcher.py  test_prices_async.py  test_prices_batch_concurrency.py  test_prices_cache_policy.py  test_prometheus_metrics.py  test_pwa_offline.py  test_refresh_cache_all_intervals.py  test_requirements_pins.py  test_sanitization.py  test_security_validation.py  test_src_bootstrap.py  test_src_cli_parser.py  (+11 more)
tests/performance/: __init__.py  config.py  locustfile.py
(+13 files in other folders)
