[project]
name = "highest_volatility"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "yfinance",
    "pandas-datareader",
    "tenacity",
    "joblib",
    "python-dateutil",
    "aiohttp",
    "fastapi",
    "uvicorn",
    "fastapi-cache2",
    "slowapi",
    "redis",
    "streamlit",
    "pydantic-settings",
    "httpx",
    "pandas-market-calendars",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "vcrpy",
    "ruff",
    "mypy",
    "hypothesis",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
